@@ -14,6 +14,7 @@ INCLUDES = \
 	$(POPPLER_GLIB_CFLAGS) \
 	$(GSTREAMER_CFLAGS) \
 	$(XINE_CFLAGS) \
+	-I$(top_srcdir)/src \
 	-DMODULES_DIR=\"$(modulesdir)\"
 
 modules_LTLIBRARIES = \
@@ -88,7 +89,9 @@ libextract_png_la_LIBADD = $(GLIB2_LIBS) $(LIBPNG_LIBS) $(EXEMPI_LIBS)
 
 libextract_ps_la_SOURCES = tracker-extract-ps.c
 libextract_ps_la_LDFLAGS = $(module_flags)
-libextract_ps_la_LIBADD = $(GLIB2_LIBS)
+libextract_ps_la_LIBADD = \
+	$(GLIB2_LIBS) \
+	$(top_builddir)/src/libtracker-common/libtracker-common.la
 
 libextract_totem_la_SOURCES = tracker-extract-totem.c
 libextract_totem_la_LDFLAGS = $(module_flags)
